<resources>
    <string name="app_name">Ops And Tactics Open Reference</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="search_hint">Search Rulebooks</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_appearance">Appearance</string>

    <string name="pref_title_header_size">Header Size</string>
    <string-array name="pref_header_size_titles">
        <item>40</item>
        <item>42</item>
        <item>44</item>
        <item>48</item>
        <item>54</item>
        <item>60</item>
    </string-array>
    <string-array name="pref_header_size_values">
        <item>40</item>
        <item>42</item>
        <item>44</item>
        <item>48</item>
        <item>54</item>
        <item>60</item>
    </string-array>

    <string name="pref_title_font_size">Font Size</string>
    <string-array name="pref_font_size_titles">
        <item>13</item>
        <item>15</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
    </string-array>
    <string-array name="pref_font_size_values">
        <item>13</item>
        <item>15</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
    </string-array>

    <string name="pref_title_body_font">Body Font</string>
    <string-array name="pref_body_font_titles">
        <item>Roboto</item>
        <item>Cabin</item>
        <item>Dream Orphans</item>
        <item>Neuton</item>
        <item>Thryromanes</item>
        <item>ModeSeven</item>
        <item>F25 Bank Printer</item>
        <item>Mono Spatial</item>
    </string-array>
    <string-array name="pref_body_font_values">
        <item>roboto.ttf</item>
        <item>cabin.ttf</item>
        <item>dream_orphans.ttf</item>
        <item>neuton.ttf</item>
        <item>thryromanes.ttf</item>
        <item>modeseven.ttf</item>
        <item>F25_bank_printer.ttf</item>
        <item>mono_spatial.ttf</item>
    </string-array>

    <string name="pref_title_secondary_font">Secondary Font</string>
    <string-array name="pref_secondary_font_titles">
        <item>Roboto</item>
        <item>Cabin</item>
        <item>Dream Orphans</item>
        <item>Neuton</item>
        <item>Thryromanes</item>
        <item>ModeSeven</item>
        <item>F25 Bank Printer</item>
        <item>Mono Spatial</item>
    </string-array>
    <string-array name="pref_secondary_font_values">
        <item>roboto.ttf</item>
        <item>cabin.ttf</item>
        <item>dream_orphans.ttf</item>
        <item>neuton.ttf</item>
        <item>thryromanes.ttf</item>
        <item>modeseven.ttf</item>
        <item>F25_bank_printer.ttf</item>
        <item>mono_spatial.ttf</item>
    </string-array>

    <string name="pref_title_theme">Theme</string>
    <string-array name="pref_theme_titles">
        <item>Standard</item>
        <item>Dark</item>
        <item>Low Contrast</item>
        <item>Low Contrast Dark</item>
        <item>Solarized Light</item>
        <item>Solarized Dark</item>
        <item>60s Terminal</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>standard</item>
        <item>dark</item>
        <item>low_contrast</item>
        <item>low_contrast_dark</item>
        <item>solarized_light</item>
        <item>solarized_dark</item>
        <item>terminal</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_books">Source Books</string>

    <string name="pref_books_core">Core Rulebook</string>
    <string name="pref_books_simplified">Simplified Quick Action Tactics System</string>
    <string name="pref_books_advanced">Advanced Arms</string>
    <string name="pref_books_magika">Modern Magika</string>
    <string name="pref_books_field_identification">Field Identification Guide</string>
    <string name="pref_books_procedural">Procedural Weapons</string>
</resources>
