<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- these values are checked to true to choose which ruebooks to display -->

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="core_rulebook"
        android:title="@string/pref_books_core"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="simplified_tactics"
        android:title="@string/pref_books_simplified"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="advanced_arms"
        android:title="@string/pref_books_advanced"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="modern_magika"
        android:title="@string/pref_books_magika"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="field_identification_guide"
        android:title="@string/pref_books_field_identification"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="procedural_weapons"
        android:title="@string/pref_books_procedural"/>

</PreferenceScreen>
