<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <!-- Bookmark -->
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_border_black_24dp"
        android:title="@string/action_bookmark"
        app:showAsAction="ifRoom"/>

    <!-- Overflow Menu -->
    <!-- Settings -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <!-- About -->
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
