<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="c1.opsandtacticsopenreference.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="c1.opsandtacticsopenreference.SettingsActivity$AppearancePreferenceFragment"
        android:icon="@drawable/ic_brush_black_24dp"
        android:title="@string/pref_header_appearance" />

    <header
        android:fragment="c1.opsandtacticsopenreference.SettingsActivity$BooksPreferenceFragment"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/pref_header_books" />

</preference-headers>
